@@ -1,3 +1,7 @@
+2005-07-25  Derek Price  <derek@ximbiot.com>
+
+	* texi2html.pl: Allow substitution of all document file names.
+
 2005-07-19  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (dist_images_DATA): Don't reference missing image files.
